--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-influx.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-influx.cfg
@@ -13,7 +13,7 @@ monitor telemetry influx
       database name test
       retention policy test
       vrf test
-      username test password 7 071B245F5A
+      username test password 0 <password>
    !
    destination influxdb test1
       url https://influx_test1.localhost
