--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-influx.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-influx.yml
@@ -6,7 +6,7 @@ monitor_telemetry_influx:
       data_retention_policy: test
       url: https://influx_test.localhost
       username: test
-      password: 071B245F5A
+      password: <password>
     - name: test1
       database: test1
       data_retention_policy: test1
