--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7169,6 +7169,8 @@ keys:
               type: str
             url:
               type: str
+              description: "It only accepts http(s), udp and unix domain destination
+                URL. \nURL pattern: '(http(s)?|udp|unix)://.+'"
             username:
               type: str
             password:
@@ -7181,7 +7183,7 @@ keys:
               - '0'
               - '7'
               - 8a
-              default: '7'
+              default: '0'
       source_group_standard_disabled:
         type: bool
         description: Disable standard set of telemetry.
@@ -7202,6 +7204,8 @@ keys:
               - str
             url:
               type: str
+              description: "It only accepts http(s), udp and unix domain socket URL.
+                \nURL pattern: '(http(s)?|udp|unix)://.+'"
       tags:
         type: list
         primary_key: name
