Feat(eos_cli_config_gen): Support additional options for IP DHCP relay and IPv6 DHCP relay (#3925)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
@@ -440,3 +440,13 @@ vlan_interfaces:
       enabled: true
       distance: 18
       prefix_length: 64
+
+  - name: Vlan337
+    description: v4 dhcp relay all-subnets
+    ip_address: 16.0.2.2/25
+    ip_dhcp_relay_all_subnets: true
+
+  - name: Vlan338
+    description: v6 dhcp relay all-subnets
+    ipv6_address: 2a00:1::1/64
+    ipv6_dhcp_relay_all_subnets: true
