--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
@@ -13,12 +13,12 @@ interface Management1
    ip address 10.73.255.122/24
 !
 policy-map type copp copp-system-policy
-   class a_class
-      shape pps 3000
-   class cls1
-      shape pps 1000
-   class cls2
+   class copp-system-cvx
       shape pps 2000
+      bandwidth pps 2000
+   class copp-system-OspfIsis
+      shape kbps 1000
+      bandwidth kbps 1000
 !
 policy-map type pbr PM_PBR_BREAKOUT
    class CM_PBR_EXCLUDE
