--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
@@ -57,13 +57,14 @@ policy_maps:
             nexthop:
               ip_address: 192.168.4.2
               recursive: true
-  copp:
+  copp_system_policy:
     enable: true
     classes:
-      - name: cls1
+      - name: copp-system-OspfIsis
         shape: 1000
-        minimum_bandwidth: 1000
-      - name: cls2
+        bandwidth: 1000
+        rate_unit: kbps
+      - name: copp-system-cvx
         shape: 2000
-      - name: a_class
-        shape: 3000
+        bandwidth: 2000
+        rate_unit: pps
