--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7896,8 +7896,9 @@ keys:
                         - mbytes
                         - packets
                         default: bytes
-      copp:
+      copp_system_policy:
         type: dict
+        description: Control-plane policy configuration.
         keys:
           enable:
             type: bool
@@ -7910,16 +7911,24 @@ keys:
               keys:
                 name:
                   type: str
+                  required: true
                 shape:
                   type: int
-                  description: Shape value in packets per second.
+                  description: Maximum rate limit.
                   min: 0
                   max: 10000000
-                minimum_bandwidth:
+                bandwidth:
                   type: int
-                  description: Minimum bandwidth in packets per second.
+                  description: Minimum bandwidth.
                   min: 0
                   max: 10000000
+                rate_unit:
+                  type: str
+                  required: true
+                  description: Rate unit for shape value and bandwidth.
+                  valid_values:
+                  - pps
+                  - kbps
   port_channel_interfaces:
     type: list
     primary_key: name
