keeping valid values for 5.0

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1264,13 +1264,14 @@ keys:
               keys:
                 source_protocol:
                   type: str
-                  valid_values:
-                    - "attached-host"
-                    - "connected"
-                    - "isis"
-                    - "ospf"
-                    - "ospfv3"
-                    - "static"
+                  # TODO AVD5.0: Add valid values and ensure we cover all options.
+                  # valid_values:
+                  #   - "attached-host"
+                  #   - "connected"
+                  #   - "isis"
+                  #   - "ospf"
+                  #   - "ospfv3"
+                  #   - "static"
                 route_map:
                   type: str
                 include_leaked:
@@ -2343,17 +2344,18 @@ keys:
                 keys:
                   source_protocol:
                     type: str
-                    valid_values:
-                      - "attached-host"
-                      - "bgp"
-                      - "connected"
-                      - "dynamic"
-                      - "isis"
-                      - "ospf"
-                      - "ospfv3"
-                      - "rip"
-                      - "static"
-                      - "user"
+                    # TODO AVD5.0: Add valid values and ensure we cover all options.
+                    # valid_values:
+                    #   - "attached-host"
+                    #   - "bgp"
+                    #   - "connected"
+                    #   - "dynamic"
+                    #   - "isis"
+                    #   - "ospf"
+                    #   - "ospfv3"
+                    #   - "rip"
+                    #   - "static"
+                    #   - "user"
                   route_map:
                     type: str
                   include_leaked:
