Feat(eos_cli_config_gen): Option to set RCF address-family ipv4, ipv6 and evpn (#3814)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -101,6 +101,19 @@ router_bgp:
       - ip_address: 192.0.2.1
         prefix_list_in: PL-FOO-v4-IN
         prefix_list_out: PL-FOO-v4-OUT
+      - ip_address: 10.2.3.8
+        rcf_in: Address_Family_IPV4_In()
+      - ip_address: 10.2.3.9
+        rcf_out: Address_Family_IPV4_Out()
+    redistribute_routes:
+      - source_protocol: connected
+        include_leaked: true
+        rcf: Address_Family_IPV4_Connected()
+      - source_protocol: bgp
+      - source_protocol: static
+        rcf: Address_Family_IPV4_Static()
+      - source_protocol: dynamic
+        route_map: Address_Family_IPV4_Dynamic_RM
   address_family_ipv6:
     networks:
       - prefix: 2001:db8:100::/40
@@ -114,15 +127,20 @@ router_bgp:
       - ip_address: 2001:db8::1
         prefix_list_in: PL-FOO-v6-IN
         prefix_list_out: PL-FOO-v6-OUT
+      - ip_address: 2001:db8::2
+        rcf_in: Address_Family_IPV6_In()
+        rcf_out: Address_Family_IPV6_Out()
     redistribute_routes:
       - source_protocol: static
         route_map: RM-IPV6-STATIC-TO-BGP
-      - source_protocol: ospf
+      - source_protocol: ospfv3
         include_leaked: true
       - source_protocol: bgp
         route_map: RM-REDISTRIBUTE-BGP
         # this should not do anything as leaked is generated when source protocol is bgp
         include_leaked: true
+      - source_protocol: connected
+        rcf: Address_Family_IPV6_Connected()
   neighbors:
     - ip_address: 192.0.3.1
       remote_as: 65432
