--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
@@ -99,21 +99,30 @@ router bgp 65101
       neighbor foo prefix-list PL-BAR-v4-IN in
       neighbor foo prefix-list PL-BAR-v4-OUT out
       neighbor foo default-originate route-map RM-FOO-MATCH always
+      neighbor 10.2.3.8 rcf in Address_Family_IPV4_In()
+      neighbor 10.2.3.9 rcf out Address_Family_IPV4_Out()
       neighbor 192.0.2.1 prefix-list PL-FOO-v4-IN in
       neighbor 192.0.2.1 prefix-list PL-FOO-v4-OUT out
       network 10.0.0.0/8
       network 172.16.0.0/12
       network 192.168.0.0/16 route-map RM-FOO-MATCH
+      redistribute bgp leaked
+      redistribute connected include leaked rcf Address_Family_IPV4_Connected()
+      redistribute dynamic route-map Address_Family_IPV4_Dynamic_RM
+      redistribute static rcf Address_Family_IPV4_Static()
    !
    address-family ipv6
       neighbor baz prefix-list PL-BAR-v6-IN in
       neighbor baz prefix-list PL-BAR-v6-OUT out
       neighbor 2001:db8::1 prefix-list PL-FOO-v6-IN in
       neighbor 2001:db8::1 prefix-list PL-FOO-v6-OUT out
+      neighbor 2001:db8::2 rcf in Address_Family_IPV6_In()
+      neighbor 2001:db8::2 rcf out Address_Family_IPV6_Out()
       network 2001:db8:100::/40
       network 2001:db8:200::/40 route-map RM-BAR-MATCH
       redistribute bgp leaked route-map RM-REDISTRIBUTE-BGP
-      redistribute ospf include leaked
+      redistribute connected rcf Address_Family_IPV6_Connected()
+      redistribute ospfv3 include leaked
       redistribute static route-map RM-IPV6-STATIC-TO-BGP
    session tracker ST1
       recovery delay 666 seconds
