--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10985,6 +10985,16 @@ keys:
                   type: str
                 activate:
                   type: bool
+                rcf_in:
+                  type: str
+                  description: 'Inbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
+                rcf_out:
+                  type: str
+                  description: 'Outbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
           peer_groups:
             type: list
             primary_key: name
@@ -11004,6 +11014,16 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: 'Inbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
+                rcf_out:
+                  type: str
+                  description: 'Outbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 domain_remote:
                   type: bool
                 encapsulation:
@@ -11179,6 +11199,16 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: 'Inbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
+                rcf_out:
+                  type: str
+                  description: 'Outbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 default_originate:
                   type: dict
                   keys:
@@ -11229,6 +11259,16 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: 'Inbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
+                rcf_out:
+                  type: str
+                  description: 'Outbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11242,6 +11282,42 @@ keys:
                       type: bool
                     route_map:
                       type: str
+          redistribute_routes:
+            type: list
+            primary_key: source_protocol
+            items:
+              type: dict
+              keys:
+                source_protocol:
+                  type: str
+                  valid_values:
+                  - attached-host
+                  - bgp
+                  - connected
+                  - dynamic
+                  - isis
+                  - ospf
+                  - ospfv3
+                  - rip
+                  - static
+                  - user
+                route_map:
+                  type: str
+                include_leaked:
+                  type: bool
+                  description: Only applicable if `source_protocol` is one of `connected`,
+                    `static`, `isis`, `ospf`, `ospfv3`.
+                rcf:
+                  type: str
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).
+
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes
+                    precedence.
+
+                    Only applicable if `source_protocol` is one of `connected`, `static`,
+                    `isis`, `user`, `dynamic`.'
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -11366,6 +11442,16 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: 'Inbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
+                rcf_out:
+                  type: str
+                  description: 'Outbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11390,6 +11476,16 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: 'Inbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
+                rcf_out:
+                  type: str
+                  description: 'Outbound RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11410,6 +11506,17 @@ keys:
                   type: str
                 include_leaked:
                   type: bool
+                rcf:
+                  type: str
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).
+
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes
+                    precedence.
+
+                    Only used if `source_protocol` is one of `connected`, `static`,
+                    `isis`, `user`, `dynamic`.'
       address_family_ipv6_multicast:
         type: dict
         keys:
