--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7169,10 +7169,9 @@ keys:
               type: str
             url:
               type: str
-              description: 'It only accepts http(s), udp and unix domain destination
+              description: It only accepts http(s), udp and unix domain destination
                 URL.
-
-                URL pattern: ''(http(s)?|udp|unix)://.+'''
+              pattern: (http(s)?|udp|unix)://.+
             username:
               type: str
             password:
@@ -7185,7 +7184,7 @@ keys:
               - '0'
               - '7'
               - 8a
-              default: '0'
+              default: '7'
       source_group_standard_disabled:
         type: bool
         description: Disable standard set of telemetry.
@@ -7206,9 +7205,8 @@ keys:
               - str
             url:
               type: str
-              description: 'It only accepts http(s), udp and unix domain socket URL.
-
-                URL pattern: ''(http(s)?|udp|unix)://.+'''
+              description: It only accepts http(s), udp and unix domain socket URL.
+              pattern: (http(s)?|udp|unix)://.+
       tags:
         type: list
         primary_key: name
