Feat(eos_cli_config_gen): Option to set RCF for route bgp ipv4/ipv6 mulit-cast and VRF (#3821)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
@@ -99,6 +99,8 @@ router_bgp:
         activate: true
     redistribute_routes:
       - source_protocol: attached-host
+      - source_protocol: isis
+        rcf: Router_BGP_Isis()
   address_family_ipv6:
     peer_groups:
       - name: IPV6-UNDERLAY
@@ -148,10 +150,17 @@ router_bgp:
             route_targets:
               - "1:30001"
             route_map: RM-DENY-DEFAULT
+          - address_family: vpn-ipv4
+            route_targets:
+              - "1:30011"
+            rcf: RT_IMPORT_AF_RCF()
+            route_map: RT_IMPORT_AF_RM
+            vpn_route_filter_rcf: RT_IMPORT_AF_RCF_FILTER()
         export:
           - address_family: evpn
             route_targets:
               - "1:30001"
+            rcf: RT_EXPORT_AF_RCF()
       redistribute_routes:
         - source_protocol: connected
     - name: Tenant_B
