--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -33,6 +33,7 @@ router bgp 65001
    !
    address-family ipv6 multicast
       no neighbor FOOBAR activate
+      redistribute isis rcf Router_BGP_Isis()
    !
    vrf VRF01
       !
@@ -56,6 +57,8 @@ router bgp 65001
          neighbor 1.2.3.4 route-map FOO in
          neighbor 1.2.3.4 route-map BAR out
          network 2.3.4.0/24 route-map BARFOO
+         redistribute connected rcf VRF_AFIPV4_RCF_CONNECTED_1()
+         redistribute static route-map VRF_AFIPV4_RM_STATIC_1
       !
       address-family ipv4 multicast
          bgp missing-policy direction in action permit
@@ -64,6 +67,8 @@ router bgp 65001
          neighbor 1.2.3.4 route-map FOO in
          neighbor 1.2.3.4 route-map BAR out
          network 239.0.0.0/24 route-map BARFOO
+         redistribute connected
+         redistribute static route-map VRF_AFIPV4MULTI_RM_STATIC
       !
       address-family ipv6
          bgp missing-policy direction in action deny-in-out
@@ -74,12 +79,20 @@ router bgp 65001
          neighbor aa::1 activate
          neighbor aa::1 route-map FOO in
          neighbor aa::1 route-map BAR out
+         neighbor aa::2 activate
+         neighbor aa::2 rcf in VRF_AFIPV6_RCF_IN()
+         neighbor aa::2 rcf out VRF_AFIPV6_RCF_OUT()
          network aa::/64
+      redistribute connected rcf VRF_AFIPV6_RCF_CONNECTED()
+      redistribute isis include leaked
+      redistribute static route-map VRF_AFIPV6_RM_STATIC
       !
       address-family ipv6 multicast
          bgp missing-policy direction in action deny
          bgp missing-policy direction out action deny
          network ff08:1::/64
+         redistribute connected
+         redistribute static route-map VRF_AFIPV6MULTI_RM_STATIC
    !
    vrf VRF02
       !
@@ -90,6 +103,7 @@ router bgp 65001
          bgp additional-paths send limit 3
    !
    vrf VRF03
+      redistribute dynamic rcf VRF_RCF_DYNAMIC()
       !
       address-family ipv4
          bgp additional-paths send ecmp
