--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-vpn-import-pruning.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-vpn-import-pruning.yml
@@ -91,10 +91,12 @@ router_bgp:
           - address_family: evpn
             route_targets:
               - "11:11"
+            rcf: RT_IMPORT_AF_RCF()
         export:
           - address_family: evpn
             route_targets:
               - "11:11"
+            rcf: RT_EXPORT_AF_RCF()
       neighbors:
         - ip_address: 10.255.251.1
           peer_group: MLAG-IPv4-UNDERLAY-PEER
@@ -103,6 +105,10 @@ router_bgp:
             all: false
       redistribute_routes:
         - source_protocol: connected
+        - source_protocol: static
+          rcf: Router_BGP_Static()
+        - source_protocol: isis
+          route_map: Router_BGP_Isis
     - name: TENANT_A_PROJECT02
       router_id: 192.168.255.3
       rd: "192.168.255.3:12"
