--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
@@ -21,6 +21,9 @@ router_bgp:
     peer_groups:
       - name: FOOBAR
         activate: false
+    redistribute_routes:
+      - source_protocol: isis
+        rcf: Router_BGP_Isis()
   address_family_flow_spec_ipv4:
     peer_groups:
       - name: FOOBAR
@@ -49,6 +52,11 @@ router_bgp:
         networks:
           - prefix: 2.3.4.0/24
             route_map: BARFOO
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV4_RCF_CONNECTED_1()
+          - source_protocol: static
+            route_map: VRF_AFIPV4_RM_STATIC_1
       address_family_ipv6:
         bgp:
           missing_policy:
@@ -64,8 +72,19 @@ router_bgp:
             activate: true
             route_map_in: FOO
             route_map_out: BAR
+          - ip_address: aa::2
+            activate: true
+            rcf_in: VRF_AFIPV6_RCF_IN()
+            rcf_out: VRF_AFIPV6_RCF_OUT()
         networks:
           - prefix: aa::/64
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV6_RCF_CONNECTED()
+          - source_protocol: static
+            route_map: VRF_AFIPV6_RM_STATIC
+          - source_protocol: isis
+            include_leaked: true
       address_family_ipv4_multicast:
         bgp:
           missing_policy:
@@ -81,6 +100,11 @@ router_bgp:
         networks:
           - prefix: 239.0.0.0/24
             route_map: BARFOO
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV4MULTI_RCF_CONNECTED()
+          - source_protocol: static
+            route_map: VRF_AFIPV4MULTI_RM_STATIC
       address_family_ipv6_multicast:
         bgp:
           missing_policy:
@@ -91,6 +115,11 @@ router_bgp:
             activate: false
         networks:
           - prefix: ff08:1::/64
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV6MULTI_RCF_CONNECTED()
+          - source_protocol: static
+            route_map: VRF_AFIPV6MULTI_RM_STATIC
       address_family_flow_spec_ipv4:
         bgp:
           missing_policy:
@@ -126,3 +155,6 @@ router_bgp:
           additional_paths:
             send:
               ecmp: true
+      redistribute_routes:
+        - source_protocol: dynamic
+          rcf: VRF_RCF_DYNAMIC()
