--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1335,8 +1335,26 @@ keys:
               keys:
                 source_protocol:
                   type: str
+                  # TODO AVD5.0: Add valid values and ensure we cover all options.
+                  # valid_values:
+                  #   - "attached-host"
+                  #   - "connected"
+                  #   - "isis"
+                  #   - "ospf"
+                  #   - "ospfv3"
+                  #   - "static"
                 route_map:
                   type: str
+                include_leaked:
+                  type: bool
+                  description: Only applicable if `source_protocol` is `isis`.
+                rcf:
+                  type: str
+                  description: |-
+                    RCF function name with parenthesis.
+                    Example: MyFunction(myarg).
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                    Only applicable if `source_protocol` is `isis`.
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -1561,6 +1579,34 @@ keys:
                   description: IPv6 prefix "A:B:C:D:E:F:G:H/I".
                 route_map:
                   type: str
+          redistribute_routes:
+            type: list
+            primary_key: source_protocol
+            convert_types:
+              - dict
+            items:
+              type: dict
+              keys:
+                source_protocol:
+                  type: str
+                  valid_values:
+                    - "connected"
+                    - "isis"
+                    - "ospf"
+                    - "ospfv3"
+                    - "static"
+                include_leaked:
+                  type: bool
+                  description: Only applicable if `source_protocol` is `isis`.
+                route_map:
+                  type: str
+                rcf:
+                  type: str
+                  description: |-
+                    RCF function name with parenthesis.
+                    Example: MyFunction(myarg).
+                    `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                    Only applicable if `source_protocol` is `isis`.
       address_family_ipv6_sr_te:
         type: dict
         keys:
@@ -2090,6 +2136,19 @@ keys:
                           type: str
                       route_map:
                         type: str
+                        description: Only applicable if `address_family` is one of `evpn`, `vpn-ipv4` or `vpn-ipv6`.
+                      rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                          Only applicable if `address_family` is one of `evpn`, `vpn-ipv4` or `vpn-ipv6`.
+                      vpn_route_filter_rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis for filtering VPN routes. Also requires `rcf` to be set.
+                          Example: MyFunction(myarg).
+                          Only applicable if `address_family` is one of `vpn-ipv4` or `vpn-ipv6`.
                 export:
                   type: list
                   primary_key: address_family
@@ -2107,6 +2166,19 @@ keys:
                           type: str
                       route_map:
                         type: str
+                        description: Only applicable if `address_family` is one of `evpn`, `vpn-ipv4` or `vpn-ipv6`.
+                      rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                          Only applicable if `address_family` is one of `evpn`, `vpn-ipv4` or `vpn-ipv6`.
+                      vpn_route_filter_rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis for filtering VPN routes. Also requires `rcf` to be set.
+                          Example: MyFunction(myarg).
+                          Only applicable if `address_family` is one of `vpn-ipv4` or `vpn-ipv6`.
             router_id:
               description: in IP address format A.B.C.D.
               type: str
@@ -2381,10 +2453,29 @@ keys:
                 keys:
                   source_protocol:
                     type: str
+                    # TODO AVD5.0: Add valid values and ensure we cover all options.
+                    # valid_values:
+                    #   - "attached-host"
+                    #   - "bgp"
+                    #   - "connected"
+                    #   - "dynamic"
+                    #   - "isis"
+                    #   - "ospf"
+                    #   - "ospfv3"
+                    #   - "rip"
+                    #   - "static"
+                    #   - "user"
                   route_map:
                     type: str
                   include_leaked:
                     type: bool
+                  rcf:
+                    type: str
+                    description: |-
+                      RCF function name with parenthesis.
+                      Example: MyFunction(myarg).
+                      `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                      Only applicable if `source_protocol` is one of `connected`, `dynamic`, `isis`, `static` and `user`.
             aggregate_addresses:
               type: list
               primary_key: prefix
@@ -2483,6 +2574,16 @@ keys:
                       route_map_out:
                         type: str
                         description: Outbound route-map name.
+                      rcf_in:
+                        type: str
+                        description: |-
+                          Inbound RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                      rcf_out:
+                        type: str
+                        description: |-
+                          Outbound RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
                       prefix_list_in:
                         type: str
                         description: Inbound prefix-list name.
@@ -2513,6 +2614,38 @@ keys:
                         description: IPv4 prefix "A.B.C.D/E".
                       route_map:
                         type: str
+                redistribute_routes:
+                  type: list
+                  primary_key: source_protocol
+                  convert_types:
+                    - dict
+                  items:
+                    type: dict
+                    keys:
+                      source_protocol:
+                        type: str
+                        valid_values:
+                          - "attached-host"
+                          - "bgp"
+                          - "connected"
+                          - "dynamic"
+                          - "isis"
+                          - "ospf"
+                          - "ospfv3"
+                          - "rip"
+                          - "static"
+                          - "user"
+                      route_map:
+                        type: str
+                      include_leaked:
+                        type: bool
+                      rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                          `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                          Only applicable if `source_protocol` is one of `connected`, `dynamic`, `isis`, `static` and `user`.
             address_family_ipv6:
               type: dict
               keys:
@@ -2584,6 +2717,16 @@ keys:
                       route_map_out:
                         type: str
                         description: Outbound route-map name.
+                      rcf_in:
+                        type: str
+                        description: |-
+                          Inbound RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                      rcf_out:
+                        type: str
+                        description: |-
+                          Outbound RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
                       prefix_list_in:
                         type: str
                         description: Inbound prefix-list name.
@@ -2603,6 +2746,37 @@ keys:
                         description: IPv6 prefix "A:B:C:D:E:F:G:H/I".
                       route_map:
                         type: str
+                redistribute_routes:
+                  type: list
+                  primary_key: source_protocol
+                  convert_types:
+                    - dict
+                  items:
+                    type: dict
+                    keys:
+                      source_protocol:
+                        type: str
+                        valid_values:
+                          - "attached-host"
+                          - "bgp"
+                          - "connected"
+                          - "dhcp"
+                          - "dynamic"
+                          - "isis"
+                          - "ospfv3"
+                          - "static"
+                          - "user"
+                      route_map:
+                        type: str
+                      include_leaked:
+                        type: bool
+                      rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                          `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                          Only applicable if `source_protocol` is one of `connected`, `dynamic`, `isis`, `static` and `user`.
             address_family_ipv4_multicast:
               type: dict
               keys:
@@ -2660,6 +2834,35 @@ keys:
                         description: IPv6 prefix "A.B.C.D/E".
                       route_map:
                         type: str
+                redistribute_routes:
+                  type: list
+                  primary_key: source_protocol
+                  convert_types:
+                    - dict
+                  items:
+                    type: dict
+                    keys:
+                      source_protocol:
+                        type: str
+                        valid_values:
+                          - "attached-host"
+                          - "connected"
+                          - "isis"
+                          - "ospf"
+                          - "ospfv3"
+                          - "static"
+                      route_map:
+                        type: str
+                      include_leaked:
+                        type: bool
+                        description: Only applicable if `source_protocol` is `isis`.
+                      rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                          `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                          Only applicable if `source_protocol` is `isis`.
             address_family_ipv6_multicast:
               type: dict
               keys:
@@ -2717,6 +2920,34 @@ keys:
                         description: IPv6 prefix "A:B:C:D:E:F:G:H/I".
                       route_map:
                         type: str
+                redistribute_routes:
+                  type: list
+                  primary_key: source_protocol
+                  convert_types:
+                    - dict
+                  items:
+                    type: dict
+                    keys:
+                      source_protocol:
+                        type: str
+                        valid_values:
+                          - "connected"
+                          - "isis"
+                          - "ospf"
+                          - "ospfv3"
+                          - "static"
+                      route_map:
+                        type: str
+                      include_leaked:
+                        type: bool
+                        description: Only applicable if `source_protocol` is `isis`.
+                      rcf:
+                        type: str
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
+                          `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                          Only applicable if `source_protocol` is `isis`.
             address_family_flow_spec_ipv4:
               type: dict
               keys:
