Fixing condition in eos template.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7902,6 +7902,7 @@ keys:
         keys:
           enable:
             type: bool
+            required: true
             description: Enable control-plane policy.
           classes:
             type: list
