--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
@@ -174,6 +174,7 @@ keys:
         keys:
           enable:
             type: bool
+            required: true
             description: Enable control-plane policy.
           classes:
             type: list
