Making disabled key defaulttrue.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7152,6 +7152,7 @@ keys:
     keys:
       disabled:
         type: bool
+        default: true
         description: Enable or disable the postcard telemetry feature.
       ingress:
         type: dict
