--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard_policy.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard_policy.schema.yml
@@ -11,6 +11,7 @@ keys:
     keys:
       disabled:
         type: bool
+        default: true
         description: Enable or disable the postcard telemetry feature.
       ingress:
         type: dict
