--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -13,9 +13,10 @@ jobs:
 
   comment:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
+    permissions: write-all
+      # issues: write
+      # pull-requests: write
+      
     steps:
       - uses: actions/github-script@v7
         env:
