Feat(eos_cli_config_gen): Add InfluxDB support (#3705)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -93,6 +93,7 @@ mlag-configuration
 monitor-layer1
 monitor-connectivity
 monitor-sessions
+monitor-telemetry-influx
 mpls
 none_configuration
 ntp
