--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7178,6 +7178,80 @@ keys:
               description: Size in bytes.
               convert_types:
               - str
+  monitor_telemetry_influx:
+    type: dict
+    keys:
+      vrf:
+        type: str
+      destinations:
+        type: list
+        primary_key: name
+        description: Configure telemetry output destinations.
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              description: InfluxDB connection name.
+            database:
+              type: str
+              description: Set name of the database.
+            data_retention_policy:
+              type: str
+            url:
+              type: str
+              description: It only accepts http(s), udp and unix domain destination
+                URL.
+              pattern: (http(s)?|udp|unix)://.+
+            username:
+              type: str
+            password:
+              type: str
+            password_type:
+              type: str
+              convert_types:
+              - int
+              valid_values:
+              - '0'
+              - '7'
+              - 8a
+              default: '7'
+      source_group_standard_disabled:
+        type: bool
+        description: Disable standard set of telemetry.
+      source_sockets:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              description: Label of the socket connection.
+            connection_limit:
+              type: int
+              min: 0
+              max: 4294967295
+              convert_types:
+              - str
+            url:
+              type: str
+              description: It only accepts http(s), udp and unix domain socket URL.
+              pattern: (http(s)?|udp|unix)://.+
+      tags:
+        type: list
+        primary_key: name
+        description: Extra tags added to the telemetry output.
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              description: Key of the global tag pair.
+            value:
+              type: str
+              required: true
+              description: Value of the global tag pair.
   mpls:
     type: dict
     keys:
