issue-3811: Added the support for BGP layer-2 FEC in-place operation

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
@@ -121,6 +121,7 @@ router bgp 65101
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix inter-domain
       route import ethernet-segment ip mass-withdraw
       route export ethernet-segment ip mass-withdraw
+      layer-2 fec in-place update
       route import overlay-index gateway
    !
    address-family ipv4
