--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
@@ -54,3 +54,6 @@ router_bgp:
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
         activate: true
+    layer_2_fec_in_place_update:
+      enabled: true
+      timeout: 100
