Feat(eos_cli_config_gen): Support logging transcevier in monitor layer1.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7104,6 +7104,10 @@ keys:
           communication:
             type: bool
             description: Enable transceiver SMBus fail and reset logging.
+          dom_and_communication:
+            type: bool
+            description: Some platforms only support command `logging tranceiver'.
+              `dom_and_communication` key configures this command.
   monitor_sessions:
     type: list
     convert_types:
