--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_layer1.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_layer1.schema.yml
@@ -27,3 +27,6 @@ keys:
           communication:
             type: bool
             description: "Enable transceiver SMBus fail and reset logging."
+          dom_and_communication:
+            type: bool
+            description: "Some platforms only support command `logging tranceiver'. `dom_and_communication` key configures this command."
