Adding convert types str.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7918,11 +7918,15 @@ keys:
                   description: Maximum rate limit.
                   min: 0
                   max: 10000000
+                  convert_types:
+                  - str
                 bandwidth:
                   type: int
                   description: Minimum bandwidth.
                   min: 0
                   max: 10000000
+                  convert_types:
+                  - str
                 rate_unit:
                   type: str
                   required: true
