Added support for dns server and tftp server options to dhcp_server eos_cli_config_gen

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
@@ -8,6 +8,10 @@ dhcp server vrf AVRF
 dhcp server vrf defauls
 !
 dhcp server
+   dns server ipv4 1.1.1.1 8.8.8.8
+   dns server ipv6 2001:4860:4860::8888
+   tftp server file ipv4 https://192.168.0.254/ztp/bootstrap https://www.arista.io/ztp/bootstrap
+   tftp server file ipv6 https://fd00::01/64/ztp/bootstrap
    !
    subnet 2a00:2::/64
    !
