issue-3811: keep enabled key as required

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
@@ -58,4 +58,5 @@ router_bgp:
       - name: EVPN-OVERLAY-PEERS
         activate: true
     layer_2_fec_in_place_update:
+      enabled: true
       timeout: 100
