--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1118,6 +1118,7 @@ keys:
             keys:
               enabled:
                 type: bool
+                required: true
               timeout:
                 type: int
                 description: In-place FEC update tracking timeout in seconds.
