--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11220,6 +11220,7 @@ keys:
             keys:
               enabled:
                 type: bool
+                required: true
               timeout:
                 type: int
                 description: In-place FEC update tracking timeout in seconds.
