--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-layer1-enabled.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-layer1-enabled.yml
@@ -3,4 +3,4 @@ monitor_layer1:
   enabled: true
   logging_mac_fault: true
   logging_transceiver:
-    dom_and_communication: true
+    enabled: true
