--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -91,7 +91,7 @@ mac-security-eth-po-entropy
 match-lists
 mlag-configuration
 monitor-layer1
-monitor-layer1-a
+monitor-layer1-enabled
 monitor-connectivity
 monitor-sessions
 monitor-telemetry-influx
