--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_layer1.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_layer1.schema.yml
@@ -27,6 +27,6 @@ keys:
           communication:
             type: bool
             description: "Enable transceiver SMBus fail and reset logging."
-          dom_and_communication:
+          enabled:
             type: bool
-            description: "Some platforms only support command `logging tranceiver'. `dom_and_communication` key configures this command."
+            description: "Some platforms only support command `logging tranceiver'. `enabled` key configures this command. Both `dom` and `communication` are enabled with this key."
