sanitize interface name

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -121,6 +121,7 @@ router internet-exit
     !
     exit-group DIRECT-EXIT-POLICY-1
         local connection IE-Ethernet2
+        local connection IE-Ethernet2_1
     !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
         local connection IE-Tunnel100
@@ -132,6 +133,7 @@ router internet-exit
         local connection IE-Tunnel102
     !
     policy DIRECT-EXIT-POLICY-1
+        exit-group DIRECT-EXIT-POLICY-1
         exit-group DIRECT-EXIT-POLICY-1
     !
     policy ZSCALER-EXIT-POLICY-1
@@ -168,6 +170,9 @@ router path-selection
       keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
       local interface Ethernet2
+         stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2_2
+      !
+      local interface Ethernet2/1
          stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2_2
       !
       peer dynamic
@@ -216,6 +221,9 @@ router service-insertion
    connection IE-Ethernet2
       interface Ethernet2 next-hop 172.16.5.4
       monitor connectivity host IE-Ethernet2
+   connection IE-Ethernet2_1
+      interface Ethernet2/1 next-hop 172.16.5.9
+      monitor connectivity host IE-Ethernet2_1
    connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
@@ -308,6 +316,13 @@ interface Ethernet2
    no shutdown
    no switchport
    ip address 172.15.5.5/31
+   ip nat service-profile IE-DIRECT-NAT
+!
+interface Ethernet2/1
+   description Colt_10555
+   no shutdown
+   no switchport
+   ip address 172.15.5.6/31
    ip nat service-profile IE-DIRECT-NAT
 !
 interface Ethernet3
@@ -439,6 +454,7 @@ application traffic recognition
 monitor connectivity
    no shutdown
    interface set SET-Ethernet2 Ethernet2
+   interface set SET-Ethernet2_1 Ethernet2/1
    interface set SET-Tunnel100 Tunnel100
    interface set SET-Tunnel101 Tunnel101
    interface set SET-Tunnel102 Tunnel102
@@ -448,6 +464,12 @@ monitor connectivity
       Internet Exit DIRECT-EXIT-POLICY-1
       local-interfaces SET-Ethernet2
       ip 172.16.5.4
+   !
+   host IE-Ethernet2_1
+      description
+      Internet Exit DIRECT-EXIT-POLICY-1
+      local-interfaces SET-Ethernet2_1
+      ip 172.16.5.9
    !
    host IE-Tunnel100
       description
@@ -488,6 +510,7 @@ ip prefix-list PL-STATIC-VRF-DEFAULT
    seq 10 permit 66.66.66.0/24
 !
 ip route 172.16.0.0/16 172.16.5.4
+ip route 172.16.0.0/16 172.16.5.9
 ip route 66.66.66.0/24 172.17.0.0
 !
 ip nat pool PORT-ONLY-POOL port-only
