--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
@@ -172,10 +172,6 @@ keys:
         type: dict
         description: Control-plane policy configuration.
         keys:
-          enable:
-            type: bool
-            required: true
-            description: Enable control-plane policy.
           classes:
             type: list
             primary_key: name
@@ -184,7 +180,6 @@ keys:
               keys:
                 name:
                   type: str
-                  required: true
                 shape:
                   type: int
                   description: Maximum rate limit.
@@ -201,6 +196,6 @@ keys:
                     - str
                 rate_unit:
                   type: str
-                  required: true
-                  description: Rate unit for shape value and bandwidth.
+                  description: |-
+                    `rate_unit` must be defined for `shape` and `bandwidth`.
                   valid_values: [ 'pps', 'kbps' ]
