Feat(eos_cli_config_gen): Adding segment-security in hardware counters

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3727,6 +3727,7 @@ keys:
               - route
               - routed-port
               - subinterface
+              - segment-security
               - tapagg
               - traffic-class
               - traffic-policy
