--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/hardware_counters.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/hardware_counters.schema.yml
@@ -82,6 +82,7 @@ keys:
                 - route
                 - routed-port
                 - subinterface
+                - segment-security
                 - tapagg
                 - traffic-class
                 - traffic-policy
