adding check in molecule

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/hardware-counter.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/hardware-counter.yml
@@ -23,3 +23,5 @@ hardware_counters:
     - name: route
       address_type: ipv6
       prefix: 2001:db8:cafe::/64
+    - name: segment-security
+      direction: in
