--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/hardware-counter.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/hardware-counter.cfg
@@ -7,6 +7,7 @@ hardware counter feature ip out layer3 units packets
 hardware counter feature mpls lfib units packets
 hardware counter feature route ipv4 vrf test 192.168.0.0/24
 hardware counter feature route ipv6 2001:db8:cafe::/64
+hardware counter feature segment-security in
 !
 transceiver qsfp default-mode 4x10G
 !
