Feat(eos_cli_config_gen)-add_transceiver_frequency_knob

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -649,6 +649,12 @@ interface Ethernet66
    vrrp 3 ipv4 100.64.0.1
    vrrp 3 ipv4 version 3
 !
+interface Ethernet67
+   description Custom_Transceiver_Frequency
+   no shutdown
+   switchport
+   transceiver frequency 190050 ghz
+!
 interface Ethernet69
    description IP NAT service-profile
    switchport
