Feat(eos_cli_config_gen)-add_transceiver_frequency_knob

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2867,6 +2867,13 @@ keys:
         transceiver:
           type: dict
           keys:
+            frequency:
+              type: int
+              convert_types:
+              - str
+              min: 190000
+              max: 200000
+              description: Transceiver Laser Frequency for 400GBASE-ZR in GHz.
             media:
               type: dict
               keys:
