--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -394,7 +394,7 @@ keys:
                   required: true
                   description: |-
                     Note:
-                      Algorithm hmac-sha-256 requires EOS version 4.31F and above to deploy the config via eAPI.
+                      Algorithm hmac-sha-256 requires EOS version 4.31F and above.
                   valid_values:
                     - "aes-128-cmac-96"
                     - "hmac-sha-256"
