Feat(eos_cli_config_gen)-add_transceiver_frequency_knob

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -653,7 +653,14 @@ interface Ethernet67
    description Custom_Transceiver_Frequency
    no shutdown
    switchport
-   transceiver frequency 190050 ghz
+   transceiver frequency 190050.000
+!
+interface Ethernet68
+   description Custom_Transceiver_Frequency
+   no shutdown
+   switchport
+   transceiver frequency 190080.000 ghz
+   transceiver media override 100gbase-ar4
 !
 interface Ethernet69
    description IP NAT service-profile
