--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -1004,3 +1004,11 @@ ethernet_interfaces:
     shutdown: false
     transceiver:
       frequency: 190050
+  - name: Ethernet68
+    description: Custom_Transceiver_Frequency
+    shutdown: false
+    transceiver:
+      frequency: 190080
+      frequency_unit: ghz
+      media:
+        override: 100gbase-ar4
